font update and ecoindex badge

--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
 
             <div class="footer-bottom">
                 <p id="footer-copyright">© 2025-2026 BiblioGenius — Open Source (<a href="https://www.gnu.org/licenses/agpl-3.0.html" style="color:var(--accent-color);">AGPL-3.0</a>)</p>
+                <a href="https://bff.ecoindex.fr/redirect/?url=https://bibliogenius.org/" target="_blank" rel="noopener" style="display:inline-block;margin-top:1rem;">
+                    <img src="https://bff.ecoindex.fr/badge/?theme=dark&url=https://bibliogenius.org/" alt="Score EcoIndex du site" loading="lazy">
+                </a>
             </div>
         </div>
     </footer>
