--- a/contribute.html
+++ b/contribute.html
@@ -257,6 +257,9 @@
     <footer class="footer" role="contentinfo">
         <div class="container" style="text-align: center;">
             <p>© 2025-2026 BiblioGenius — <a href="https://www.gnu.org/licenses/agpl-3.0.html" style="color:var(--accent-light);">AGPL-3.0</a> | <a href="index.html" style="color:white;">Retour à l'accueil</a></p>
+            <a href="https://bff.ecoindex.fr/redirect/?url=https://bibliogenius.org/contribute.html" target="_blank" rel="noopener" style="display:inline-block;margin-top:1rem;">
+                <img src="https://bff.ecoindex.fr/badge/?theme=dark&url=https://bibliogenius.org/contribute.html" alt="Score EcoIndex du site" loading="lazy">
+            </a>
         </div>
     </footer>
 
