--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
+    <link rel="author" type="text/markdown" href="/llms.txt">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Structured Data -->
