--- a/index.html
+++ b/index.html
@@ -124,24 +124,24 @@
             <h2 class="sr-only" id="features-title">Fonctionnalités</h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <span class="feature-icon" aria-hidden="true">📱</span>
+                    <span class="feature-icon" aria-hidden="true"><svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect x="12" y="2" width="24" height="44" rx="5" fill="#2563eb"/><rect x="15" y="8" width="18" height="28" rx="1.5" fill="#fff"/><path d="M20 22l4 4 6-8" fill="none" stroke="#2563eb" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/><rect x="20" y="40" width="8" height="2" rx="1" fill="#93c5fd"/></svg></span>
                     <h3 id="feature-local-title">Local-First</h3>
                     <p id="feature-local-desc">Vos données vous appartiennent. Fonctionne hors-ligne, sans cloud.</p>
                 </div>
                 <div class="feature-card">
-                    <span class="feature-icon" aria-hidden="true">🤝</span>
+                    <span class="feature-icon" aria-hidden="true"><svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M14 12L34 12M14 12L24 38M34 12L24 38" stroke="#dbeafe" stroke-width="2.5"/><circle cx="14" cy="12" r="7" fill="#2563eb"/><circle cx="34" cy="12" r="7" fill="#2563eb"/><circle cx="24" cy="38" r="7" fill="#2563eb"/><circle cx="14" cy="12" r="3" fill="#fff"/><circle cx="34" cy="12" r="3" fill="#fff"/><circle cx="24" cy="38" r="3" fill="#fff"/></svg></span>
                     <h3 id="feature-p2p-title">Partage Réseau</h3>
                     <p id="feature-p2p-desc">Prêtez vos livres à vos amis ou voisins de confiance. Créez un réseau de
                         lecture local et décentralisé.</p>
                 </div>
                 <div class="feature-card">
-                    <span class="feature-icon" aria-hidden="true">🔐</span>
+                    <span class="feature-icon" aria-hidden="true"><svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M24 4L6 12v12c0 11 8 18 18 20 10-2 18-9 18-20V12L24 4z" fill="#2563eb"/><rect x="19" y="24" width="10" height="9" rx="2" fill="#fff"/><path d="M21 24v-4a3 3 0 016 0v4" fill="none" stroke="#fff" stroke-width="2.5" stroke-linecap="round"/><circle cx="24" cy="28.5" r="1.5" fill="#2563eb"/></svg></span>
                     <h3 id="feature-e2ee-title">Chiffré & Privé</h3>
                     <p id="feature-e2ee-desc">Pas de traçage, pas de publicité. Vos données sont chiffrées de bout en
                         bout : personne ne peut les lire, même pas le serveur.</p>
                 </div>
                 <div class="feature-card">
-                    <span class="feature-icon" aria-hidden="true">🧩</span>
+                    <span class="feature-icon" aria-hidden="true"><svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect x="4" y="4" width="18" height="18" rx="4" fill="#2563eb"/><rect x="26" y="4" width="18" height="18" rx="4" fill="#93c5fd"/><rect x="4" y="26" width="18" height="18" rx="4" fill="#93c5fd"/><rect x="26" y="26" width="18" height="18" rx="4" fill="#2563eb"/></svg></span>
                     <h3 id="feature-modular-title">Modulaire</h3>
                     <p id="feature-modular-desc">Une application qui s'adapte à votre usage : lecteur, famille,
                         association, bibliothécaire, libraire ou enseignant.</p>
@@ -174,10 +174,10 @@
             <p id="test-desc">BiblioGenius est disponible en bêta. Rejoignez les premiers testeurs !</p>
             <div class="test-buttons">
                 <a href="https://testflight.apple.com/v1/app/6757465461" target="_blank" rel="noopener" class="btn btn-primary">
-                    <span aria-hidden="true">🍎</span> <span id="btn-testflight-text">Tester sur iOS (TestFlight)</span>
+                    <svg aria-hidden="true" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="width:1.2em;height:1.2em;fill:currentColor;flex-shrink:0;"><path d="M12.152 6.896c-.948 0-2.415-1.078-3.96-1.04-2.04.027-3.91 1.183-4.961 3.014-2.117 3.675-.546 9.103 1.519 12.09 1.013 1.454 2.208 3.09 3.792 3.039 1.52-.065 2.09-.987 3.935-.987 1.831 0 2.35.987 3.96.948 1.637-.026 2.676-1.48 3.676-2.948 1.156-1.688 1.636-3.325 1.662-3.415-.039-.013-3.182-1.221-3.22-4.857-.026-3.04 2.48-4.494 2.597-4.559-1.429-2.09-3.623-2.324-4.39-2.376-2-.156-3.675 1.09-4.61 1.09zM15.53 3.83c.843-1.012 1.4-2.427 1.245-3.83-1.207.052-2.662.805-3.532 1.818-.78.896-1.454 2.338-1.273 3.714 1.338.104 2.715-.688 3.559-1.701"/></svg> <span id="btn-testflight-text">Tester sur iOS (TestFlight)</span>
                 </a>
             </div>
-            <p id="android-note" class="android-note"><span aria-hidden="true">🤖</span> <button type="button" onclick="openContact(event)" id="android-note-text" style="background:none;border:none;color:inherit;text-decoration:underline;cursor:pointer;font:inherit;padding:0;">Android disponible sur demande</button></p>
+            <p id="android-note" class="android-note"><svg aria-hidden="true" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="width:1.2em;height:1.2em;fill:currentColor;vertical-align:-0.15em;"><path d="M18.4395 5.5586c-.675 1.1664-1.352 2.3318-2.0274 3.498-.0366-.0155-.0742-.0286-.1113-.043-1.8249-.6957-3.484-.8-4.42-.787-1.8551.0185-3.3544.4643-4.2597.8203-.084-.1494-1.7526-3.021-2.0215-3.4864a1.1451 1.1451 0 0 0-.1406-.1914c-.3312-.364-.9054-.4859-1.379-.203-.475.282-.7136.9361-.3886 1.5019 1.9466 3.3696-.0966-.2158 1.9473 3.3593.0172.031-.4946.2642-1.3926 1.0177C2.8987 12.176.452 14.772 0 18.9902h24c-.119-1.1108-.3686-2.099-.7461-3.0683-.7438-1.9118-1.8435-3.2928-2.7402-4.1836a12.1048 12.1048 0 0 0-2.1309-1.6875c.6594-1.122 1.312-2.2559 1.9649-3.3848.2077-.3615.1886-.7956-.0079-1.1191a1.1001 1.1001 0 0 0-.8515-.5332c-.5225-.0536-.9392.3128-1.0488.5449zm-.0391 8.461c.3944.5926.324 1.3306-.1563 1.6503-.4799.3197-1.188.0985-1.582-.4941-.3944-.5927-.324-1.3307.1563-1.6504.4727-.315 1.1812-.1086 1.582.4941zM7.207 13.5273c.4803.3197.5506 1.0577.1563 1.6504-.394.5926-1.1038.8138-1.584.4941-.48-.3197-.5503-1.0577-.1563-1.6504.4008-.6021 1.1087-.8106 1.584-.4941z"/></svg> <button type="button" onclick="openContact(event)" id="android-note-text" style="background:none;border:none;color:inherit;text-decoration:underline;cursor:pointer;font:inherit;padding:0;">Android disponible sur demande</button></p>
         </div>
     </section>
 
